--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Page title</title>
+    <style>
+        body{
+            background:blue;
+            padding: 0px 0px;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello World!</h1>
